# autopilot

./: .gitignore  1.2.26-fix-plan.md  ADDITIONAL_FIXES.md  BUG_FIXES.md  COMPLETE_SUMMARY.md  CRITICAL_FIXES_COMPLETE.md  CURRENT_STATUS.md  FIXES_SUMMARY.md  IMPLEMENTATION_STATUS.md  Install Autopilot.command  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_SUMMARY_REPORT.md  README.md  REAL_FIXES_COMPLETE.md  TEST_FIXES.md  UAT_STASH_FIX_SUMMARY.md  WORKTREE_ISOLATION_COMPLETE.md  autopilot_prd_spec.md  install.sh  phase4_smoke_test_plan.md  plan.md  pyproject.toml  test_debug_subprocess.py  test_extract_debug.py  test_prompt_escaping.py  test_stdin_prompt.py  test_subprocess.py  verify_installation.py
bf_test/: plan.md
bf_test/logs/: .32156e8e8f893dea45b2e859c985be0ee421bb53-audit.json
logs/: .4ecd1343988c37275a325610f2aabecdd398393d-audit.json  .caac8e9fa99d822d9eb1590838850d0248d24039-audit.json
schemas/: plan.json  review.json
src/: main.py
src/agents/: base.py  claude.py  codex.py
src/config/: loader.py  models.py
src/executor/: loop.py
src/integrations/: github.py
src/observability/: __init__.py  dashboard.py
src/recovery/: __init__.py  policies.py
src/safety/: __init__.py  guards.py
src/scheduler/: __init__.py  dag.py
src/state/: machine.py  persistence.py  worker.py
src/tasks/: __init__.py  chunker.py  parser.py  plan.py
src/utils/: cleanup.py  git.py  logging.py  subprocess.py
src/validation/: runner.py
tasks/: example-task.md
templates/: plan.md  task.md
tests/: TEST_PLAN.md
tests/uat/: final_uat.md  (+3 more)
(+11 files in other folders)
